@@ -5,19 +5,18 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import ru.practicum.StatsClient;
-import ru.practicum.ViewStatsDto;
+import ru.practicum.AnalyzerClient;
 import ru.practicum.event.Event;
 import ru.practicum.event.EventMapper;
+import ru.practicum.event.dto.ConfirmedRequestsView;
 import ru.practicum.event.dto.EventShortDto;
 import ru.practicum.event.dto.UserShortDto;
 import ru.practicum.event.repository.EventRepository;
+import ru.practicum.ewm.stats.proto.RecommendedEventProto;
 import ru.practicum.exception.NotFoundException;
-import ru.practicum.event.dto.ConfirmedRequestsView;
 import ru.practicum.feign.RequestClient;
 import ru.practicum.feign.UserClient;
 
-import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -31,7 +30,7 @@ public class CompilationServiceImpl implements CompilationService {
     private final EventRepository eventRepository;
     private final RequestClient requestClient;
     private final UserClient userClient;
-    private final StatsClient statsClient;
+    private final AnalyzerClient analyzerClient;
 
     @Override
     @Transactional
@@ -130,8 +129,8 @@ public class CompilationServiceImpl implements CompilationService {
                 .distinct()
                 .toList();
 
-        Map<Long, Long> viewsMap = getViewsForEvents(
-                allEvents.stream().map(Event::getId).collect(Collectors.toSet())
+        Map<Long, Double> ratingsMap = getRatingsForEvents(
+                allEvents.stream().map(Event::getId).collect(Collectors.toList())
         );
         Map<Long, Long> confirmedRequestsMap = getConfirmedRequestsForEvents(
                 allEvents.stream().map(Event::getId).collect(Collectors.toSet())
@@ -140,7 +139,7 @@ public class CompilationServiceImpl implements CompilationService {
         Map<Long, EventShortDto> eventDtoMap = allEvents.stream()
                 .collect(Collectors.toMap(
                         Event::getId,
-                        event -> createEventShortDtoWithStats(event, viewsMap, confirmedRequestsMap)
+                        event -> createEventShortDtoWithRatings(event, ratingsMap, confirmedRequestsMap)
                 ));
 
         return compilations.stream()
@@ -165,56 +164,41 @@ public class CompilationServiceImpl implements CompilationService {
             return Collections.emptySet();
         }
 
-        Set<Long> eventIds = events.stream()
-                .map(Event::getId)
-                .collect(Collectors.toSet());
-
-        Map<Long, Long> viewsMap = getViewsForEvents(eventIds);
-        Map<Long, Long> confirmedRequestsMap = getConfirmedRequestsForEvents(eventIds);
+        Map<Long, Double> ratingsMap = getRatingsForEvents(events.stream().map(Event::getId).collect(Collectors.toList()));
+        Map<Long, Long> confirmedRequestsMap = getConfirmedRequestsForEvents(events.stream().map(Event::getId).collect(Collectors.toSet()));
 
         return events.stream()
-                .map(event -> createEventShortDtoWithStats(event, viewsMap, confirmedRequestsMap))
+                .map(event -> createEventShortDtoWithRatings(event, ratingsMap, confirmedRequestsMap))
                 .collect(Collectors.toSet());
     }
 
-    private EventShortDto createEventShortDtoWithStats(Event event,
-                                                       Map<Long, Long> viewsMap,
+    private EventShortDto createEventShortDtoWithRatings(Event event,
+                                                       Map<Long, Double> ratingsMap,
                                                        Map<Long, Long> confirmedRequestsMap) {
         UserShortDto userDto = userClient.getUserDto(event.getInitiatorId());
         EventShortDto dto = EventMapper.toShortDto(event, userDto);
         if (dto != null) {
-            dto.setViews(viewsMap.getOrDefault(event.getId(), 0L));
+            dto.setRating(ratingsMap.getOrDefault(event.getId(), 0.0));
             dto.setConfirmedRequests(confirmedRequestsMap.getOrDefault(event.getId(), 0L));
         }
         return dto;
     }
 
-    private Map<Long, Long> getViewsForEvents(Set<Long> eventIds) {
+    private Map<Long, Double> getRatingsForEvents(List<Long> eventIds) {
         if (eventIds.isEmpty()) {
             return Collections.emptyMap();
         }
 
         try {
-            List<String> uris = eventIds.stream()
-                    .map(id -> "/events/" + id)
-                    .collect(Collectors.toList());
+            List<RecommendedEventProto> ratings = analyzerClient.getInteractionsCount(eventIds).toList();
 
-            List<ViewStatsDto> stats = statsClient.getStats(
-                    LocalDateTime.now().minusYears(1),
-                    LocalDateTime.now().plusDays(1),
-                    uris,
-                    false
-            );
-
-            return stats.stream()
-                    .filter(stat -> stat.getUri() != null)
+            return ratings.stream()
                     .collect(Collectors.toMap(
-                            stat -> extractEventIdFromUri(stat.getUri()),
-                            ViewStatsDto::getHits,
-                            Long::sum
+                            RecommendedEventProto::getEventId,
+                            RecommendedEventProto::getScore
                     ));
         } catch (Exception e) {
-            log.warn("Не удалось получить статистику: {}", e.getMessage());
+            log.warn("Не удалось получить рейтинги: {}", e.getMessage());
             return Collections.emptyMap();
         }
     }
